# MNIST_DeepLearning

./: CMakeLists.txt  Keras_NN.py  README.md
include/: DNN.h  Node.h
saved_data/784_100_40_40_10/: biases_1.csv  biases_2.csv  biases_3.csv  biases_4.csv  weights_1.csv  weights_2.csv  weights_3.csv  weights_4.csv
saved_data/784_20_15_10/: biases_1.csv  biases_2.csv  biases_3.csv  weights_1.csv  weights_2.csv  weights_3.csv
saved_data/784_260_87_29_10/: biases_1.csv  biases_2.csv  biases_3.csv  biases_4.csv  weights_1.csv  weights_2.csv  weights_3.csv  weights_4.csv
saved_data/784_35_15_15_10/: biases_1.csv  biases_2.csv  biases_3.csv  biases_4.csv  weights_1.csv  weights_2.csv  weights_3.csv  weights_4.csv
source/DNN/: DNN.cxx  DNN.h  DNN_Main.cxx  DNN_class_def_in_file.cxx  Node.cxx  Node_main.cxx  Node_older.cxx  test_backpropagate.cxx  test_forward_propagate.cxx  test_index_looper.cxx  test_xtensor_dump.cxx
source/DataReader/: main.cpp
